# asimov-jq-module

./: CHANGES.md  Cargo.toml  README.md
.asimov/: module.yaml
.config/: gemspec.rb  package.json  pyproject.toml
.github/workflows/: release.yaml
etc/: install.cast  install.sh
src/: main.rs
src/runner/: main.rs
