# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-jq-module"
version = "0.0.1"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for JSON transformation using the jq filter language."
#documentation = "https://docs.rs/asimov-jq-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-jq-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = [
    "command-line-utilities",
    "template-engine",
    "text-processing",
    "value-formatting",
    "encoding",
]
publish = true

[features]
default = ["all", "cli", "std"]
all = ["tracing"]
cli = ["pretty", "std", "dep:clientele"]
std = [
    "asimov-module/std",
    "clientele/std",
    "jq/std",
    "tracing?/std",
    "tracing-subscriber?/fmt",
    "tracing-subscriber?/std",
]
unstable = []

pretty = ["dep:colored_json"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
asimov-module = { version = "25.0.0-dev.8", default-features = false }
clientele = { version = "0.3", default-features = false, features = [
    "argfile",
    "dotenv",
    "wild",
], optional = true }
colored_json = { version = "5", default-features = false, optional = true }
jq = { version = "0.1", default-features = false, features = ["all"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
tracing = { version = "0.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "alloc",
    "tracing-log",
], optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-jq-runner"
path = "src/main.rs"
required-features = ["cli"]
