# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-jq-module"
version = "0.1.4"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for JSON transformation using the jq filter language."
#documentation = "https://docs.rs/asimov-jq-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-jq-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = [
    "command-line-utilities",
    "template-engine",
    "text-processing",
    "value-formatting",
    "encoding",
]
publish = true

[features]
default = ["all", "cli", "std"]
all = ["tracing"]
cli = ["asimov-module/cli", "pretty", "std"]
std = ["asimov-module/std", "jq/std"]
tracing = ["asimov-module/tracing"]
unstable = []

pretty = ["dep:colored_json"]

[dependencies]
asimov-module = { version = "25.0.0-dev.9", default-features = false }
colored_json = { version = "5", default-features = false, optional = true }
jq = { version = "0.1", default-features = false, features = ["all"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-jq-runner"
path = "src/runner/main.rs"
required-features = ["cli"]
