# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-jq-module"
version = "0.1.5"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for JSON transformation using the jq filter language."
#documentation = "https://docs.rs/asimov-jq-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-jq-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = [
    "command-line-utilities",
    "template-engine",
    "text-processing",
    "value-formatting",
    "encoding",
]
publish = true

[features]
default = ["all", "cli", "std"]
all = ["pretty", "tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "clap?/std", "clientele?/std", "jq/std"]
unstable = []

# Optional features:
pretty = ["dep:colored_json"]
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.17", default-features = false }
jq = { version = "0.1", default-features = false, features = ["all"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "std",
], optional = true }
colored_json = { version = "5", default-features = false, optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-jq-runner"
path = "src/runner/main.rs"
required-features = ["cli"]
